--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,20 @@
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<!-- give full qualified name of your main class-->
+							<mainClass>pl.adamd.crm.api.ApiApplication</mainClass>
+
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
 		</plugins>
 		</pluginManagement>
 	</build>
