--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<packaging>jar</packaging>
 	<properties>
 		<java.version>1.8</java.version>
+		<start-class>pl.adamd.crm.api.ApiApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -92,6 +93,7 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+					<mainClass>pl.adamd.crm.api.ApiApplication</mainClass>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.mapstruct</groupId>
@@ -106,20 +108,7 @@
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.1.0</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<!-- give full qualified name of your main class-->
-							<mainClass>pl.adamd.crm.api.ApiApplication</mainClass>
 
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
 		</plugins>
 		</pluginManagement>
 	</build>
