--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@
 #spring.datasource.initialize=true
 #spring.jpa.hibernate.ddl-auto=update
 #
-#jwt.expiration.ms=72000000
-#jwt.secret=crmAppEcoSystem
+jwt.expiration.ms=72000000
+jwt.secret=crmAppEcoSystem
